--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h1>ToDo list</h1>
-  <app-input ([ngModel])="valueText"></app-input>
-  <p>{{valueText}}</p>
+  <h1>ToDo list {{thisInput}}</h1>
+  <app-input></app-input>
   <app-button></app-button>
+  <app-field-to-push></app-field-to-push>
 </div>
