--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h1>ToDo list {{thisInput}}</h1>
-  <app-input></app-input>
-  <app-button></app-button>
-  <app-field-to-push></app-field-to-push>
+  <h1>ToDo list</h1>
+  <app-input (textFromInput)="getInput($event)"></app-input>
+  <app-button (click)="addElementToList()"></app-button>
+  <app-field-to-push [allTodo]="allTodo"></app-field-to-push>
 </div>
