--- a/src/app/field-to-push/field-to-push.component.html
+++ b/src/app/field-to-push/field-to-push.component.html
@@ -1,8 +1,14 @@
 <ng-container *ngFor="let elem of allTodo; let n = index">
-  <p [ngClass]="{undone:true}">
+  <p *ngIf="elem.redact; else redacting" [ngClass]="{done: elem.done}">
     <input type="checkbox" (change)="changeCheck(n)">
     {{elem.value}}
   </p>
+  <ng-template #redacting>
+    <input [(ngModel)]="allTodo[n].value">
+  </ng-template>
   <button (click)="deleteElem(n)">Delete</button>
-  <button (click)="redact()">Redacting</button>
+  <button *ngIf="elem.redact; else saveButton" (click)="redact(n)">Redacting</button >
+  <ng-template #saveButton>
+    <button (click)="redact(n)">Save</button>
+  </ng-template>
 </ng-container>
