--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,1 +1,1 @@
-<input [(ngModel)]="inputString" (input)="pushToParent()">
+<input class='input' [(ngModel)]="inputString" (input)="pushToParent()" >
