--- a/src/app/field-to-push/field-to-push.component.html
+++ b/src/app/field-to-push/field-to-push.component.html
@@ -1,3 +1,3 @@
-<ng-container *ngFor="let elem of allTodo; let n = index">
-  <app-element-of-input class="element" [n]="n" [allTodo]="allTodo" [elem]="elem" ></app-element-of-input>
+<ng-container *ngFor="let elem of allTodo; let n = index"   >
+  <app-element-of-input  [n]="n" [allTodo]="allTodo" [elem]="elem" ></app-element-of-input>
 </ng-container>
